# df-structures

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Bitfield.pm  Common.pm  Enum.pm  README.UPDATE  README.md  SYNTAX.rst  StructFields.pm  StructType.pm  ToUpdate-v0.34.01.txt  changelog.txt  codegen.pl  data-definition.xsd  df-code.lisp  df.abstract_building.xml  df.activity.xml  df.activity_meeting.xml  df.adventure.xml  df.adventure_log.xml  df.advmode.xml  df.agreement.xml  df.alert_state.xml  df.announcement.xml  df.announcements.xml  df.army.xml  df.army_controller.xml  df.army_tracking_info.xml  df.art.xml  df.art_image.xml  df.battlefield.xml  df.belief_system.xml  df.block.xml  df.breed.xml  df.building-raws.xml  df.building-vectors.xml  df.building.xml  df.building_def.xml  (+218 more)
.github/workflows/: build.yml  buildmaster-rebuild.yml  check-struct-sizes.yml  check-type-sizes.yml  comment-pr.yml  generate-symbols.yml
linux/: all.csv  cmpnames.pl  ctors-base.txt  df.globals.xml  globals.csv  therapist.ini
osx/: ctors-4305.txt  ctors-base.txt  df.globals.xml  therapist.ini
tools/: CMakeLists.txt  compare-sizes.py  dump-type-sizes.cpp.in  generate-type-dump.py  generate-type-size-comment.py  type-size-comment.md.in
travis/: run-codegen.bash
windows/: all.csv  df.globals.xml  globals.csv  therapist.ini
